# light2d-ecs

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  attachable.hpp  component.hpp  entity.hpp  registry.hpp  system.hpp
test/: CMakeLists.txt  component.cpp  entity.cpp  main.cpp  test_component.hpp
